--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ description: >- # this means to ignore newlines until "baseurl:"
    test new IoT devices inside VR environment (and don't even need to buy them!). 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-github_username:  FedorIvachev
+github_username:  VRSimulator
 
 # Build settings
 theme: minima
